--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -15,6 +15,15 @@
         android:layout_height="match_parent"
         android:padding="8dp">
 
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:visibility="@{viewModel.isLoading}" />
+
         <TextView
             android:id="@+id/name"
             android:layout_width="match_parent"
@@ -26,22 +35,22 @@
             tools:text="name" />
 
         <ImageView
-            app:imageUrl="@{viewModel.movie.poster_path}"
             android:id="@+id/image"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="350dp"
+            android:layout_height="350dp"
             android:layout_marginTop="8dp"
+            app:imageUrl="@{viewModel.movie.poster_path}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/name" />
 
         <TextView
             android:id="@+id/status"
-            app:layout_constraintTop_toBottomOf="@id/image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="@{viewModel.movie.status}"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintTop_toBottomOf="@id/image" />
 
         <TextView
             android:id="@+id/description"
