--- a/app/src/main/res/layout/fragment_top_rated_movies.xml
+++ b/app/src/main/res/layout/fragment_top_rated_movies.xml
@@ -11,24 +11,24 @@
 
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        app:refreshing="@{viewModel.isLoading}"
-        app:onRefreshListener="@{() -> viewModel.update()}"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/holo_orange_light">
+        android:background="@android:color/darker_gray"
+        app:onRefreshListener="@{() -> viewModel.update()}"
+        app:refreshing="@{viewModel.isLoading}">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <androidx.recyclerview.widget.RecyclerView
-                app:layout_constraintTop_toTopOf="parent"
                 android:id="@+id/movies_recycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 app:items="@{viewModel.moviesList}"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
